--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unblocked_0",
+  "name": "unblocked_4567885435541111",
   "description": "An open-source unblocked games website built with simplicity in mind.",
   "version": "3.3.0",
   "author": "Cohen Erickson <contact@cohenerickson.com>",
